@@ -1,0 +1,50 @@
+JWasm v2.15, Apr  9 2022
+GRPALIGN.ASM
+
+                                    .286
+                                    .MODEL small
+                                    option casemap:none
+                                    .dosseg
+                                    .stack 2048
+                                    .386
+
+                                    .data
+
+00000000  00000000              var1 dd 0
+
+                                ;--- alignment "para" places this segment at offset 10h within DGROUP
+                                ;--- in the binary map up to 2.15 the RVA is displayed as 8, though.
+                                ;--- this is because the group itself "contains" an offset ( because
+                                ;--- segment _TEXT is just 8 bytes, hence DGROUP "starts" at offset
+                                ;--- 8 ). It's confusing...
+
+00000000                        _BSS segment para public 'BSS'
+
+                                DGROUP group _BSS
+
+00000000  000000000000000000    buffer  db 200h dup (?)
+
+00000200                        _BSS ends
+
+00000000                            .code
+
+00000000                        start proc c public
+00000000  BA0000                    mov dx, offset buffer
+00000003  B8004C                    mov ax, 4C00h
+00000006  CD21                      int 21h
+00000008                        start endp
+
+                                    END start
+
+
+Binary Map:
+
+Segment                  Pos(file)     RVA  Size(fil) Size(mem)
+---------------------------------------------------------------
+<header>                        0        0        20         0
+_TEXT                          20        0         8         8
+_DATA                          28        8         4         4
+_BSS                            0       10         0       200
+STACK                           0      210         0       800
+---------------------------------------------------------------
+                                                  2C       A10
